Implement partially certified logic
