# server/hwapi/endpoints/certification/logic.py
@@ -18,7 +18,9 @@
 #        Nadzeya Hutsko <nadzeya.hutsko@canonical.com>
 """The algorithms for determining certification status"""
 
-from sqlalchemy.orm import Session
+from typing import Callable, Any
+from sqlalchemy.orm import Session, Query
+from pydantic import BaseModel
 
 from hwapi.endpoints.certification.rbody_validators import (
     CertificationStatusRequest,
@@ -26,6 +28,7 @@ from hwapi.endpoints.certification.rbody_validators import (
     RelatedCertifiedSystemExistsResponse,
 )
 from hwapi.data_models import data_validators, repository
+from hwapi.data_models.models import Device
 
 
 def is_certified(
@@ -76,7 +79,7 @@ def is_partially_certified(
     system_info: CertificationStatusRequest, db: Session
 ) -> tuple[bool, RelatedCertifiedSystemExistsResponse | None]:
     """
-    Check if some components of the system were seen on other certified machines
+    Check if some components of the system were seen on other certified machines.
     """
     release = (
         repository.get_release_from_os(db, system_info.os) if system_info.os else None
@@ -86,56 +89,120 @@ def is_partially_certified(
         db, system_info.architecture, board, release
     )
     machine_ids = [machine.id for machine in machines]
+    devices_query = repository.get_devices_by_machine_ids(db, machine_ids)
 
-    devices_query = repository.get_joined_device_query(db, machine_ids)
-    cpus = []
-    if system_info.processor:
-        for cpu_info in system_info.processor:
-            cpu = repository.find_matching_cpu(db, devices_query, cpu_info)
-            if cpu is None:
-                continue
-            cpus.append(
-                data_validators.ProcessorValidator(
-                    manufacturer=cpu.vendor.name,
-                    version=cpu.name,
-                    frequency=cpu_info.frequency,
-                    family=cpu_info.family,
-                )
-            )
+    cpus = _get_matching_devices(
+        db,
+        devices_query,
+        system_info.processor or [],
+        repository.find_matching_cpu,
+        data_validators.ProcessorValidator,
+        lambda device, info: data_validators.ProcessorValidator(
+            manufacturer=device.vendor.name,
+            version=device.name,
+            frequency=info.frequency,
+            family=info.family,
+        ),
+    )
 
-    gpus = []
-    if system_info.gpu:
-        for gpu_info in system_info.gpu:
-            gpu = repository.find_matching_gpu(db, devices_query, gpu_info)
-            if gpu is None:
-                continue
-            gpus.append(
-                data_validators.GPUValidator(
-                    manufacturer=gpu.vendor.name,
-                    version=gpu.name,
-                    identifier=gpu.identifier,
-                )
-            )
-    network_devices = []
-    if system_info.network:
-        for network_info in system_info.network:
-            network_device = repository.find_matching_network_device(
-                db, devices_query, network_info
-            )
-            if network_device is None:
-                continue
-            network_devices.append(
-                data_validators.NetworkAdapterValidator(
-                    bus=network_device.bus,
-                    identifier=network_device.identifier,
-                    model=network_device.name,
-                    vendor=network_device.vendor.name,
-                    capacity=network_info.capacity,
-                )
-            )
-    # If there are no matching devices of any time, return False
-    if not any([gpus, cpus, network_devices]):
+    gpus = _get_matching_devices(
+        db,
+        devices_query,
+        system_info.gpu or [],
+        repository.find_matching_gpu,
+        data_validators.GPUValidator,
+        lambda device, info: data_validators.GPUValidator(
+            manufacturer=device.vendor.name,
+            version=device.name,
+            identifier=device.identifier,
+        ),
+    )
+
+    network_devices = _get_matching_devices(
+        db,
+        devices_query,
+        system_info.network or [],
+        repository.find_matching_network_device,
+        data_validators.NetworkAdapterValidator,
+        lambda device, info: data_validators.NetworkAdapterValidator(
+            bus=device.bus,
+            identifier=device.identifier,
+            model=device.name,
+            vendor=device.vendor.name,
+            capacity=info.capacity,
+        ),
+    )
+
+    wireless_devices = _get_matching_devices(
+        db,
+        devices_query,
+        system_info.wireless or [],
+        repository.find_matching_wireless_device,
+        data_validators.WirelessAdapterValidator,
+        lambda device, _: data_validators.WirelessAdapterValidator(
+            model=device.name, vendor=device.vendor.name, identifier=device.identifier
+        ),
+    )
+
+    audio_devices = _get_matching_devices(
+        db,
+        devices_query,
+        system_info.audio or [],
+        repository.find_matching_audio_device,
+        data_validators.AudioValidator,
+        lambda device, _: data_validators.AudioValidator(
+            model=device.name, vendor=device.vendor.name, identifier=device.identifier
+        ),
+    )
+
+    capture_devices = _get_matching_devices(
+        db,
+        devices_query,
+        system_info.video or [],
+        repository.find_matching_capture_device,
+        data_validators.VideoCaptureValidator,
+        lambda device, _: data_validators.VideoCaptureValidator(
+            model=device.name, vendor=device.vendor.name, identifier=device.identifier
+        ),
+    )
+
+    pci_devices = _get_matching_devices(
+        db,
+        devices_query,
+        system_info.pci_peripherals or [],
+        repository.find_matching_pci_device,
+        data_validators.PCIPeripheralValidator,
+        lambda device, _: data_validators.PCIPeripheralValidator(
+            name=device.name, vendor=device.vendor.name, pci_id=device.identifier
+        ),
+    )
+
+    usb_devices = _get_matching_devices(
+        db,
+        devices_query,
+        system_info.usb_peripherals or [],
+        repository.find_matching_usb_device,
+        data_validators.USBPeripheralValidator,
+        lambda device, _: data_validators.USBPeripheralValidator(
+            name=device.name, vendor=device.vendor.name, usb_id=device.identifier
+        ),
+    )
+
+    # If there are no matching devices of any type, return False
+    if not any(
+        [
+            gpus,
+            cpus,
+            network_devices,
+            wireless_devices,
+            audio_devices,
+            capture_devices,
+            pci_devices,
+            usb_devices,
+        ]
+    ):
         return False, None
+
     return True, RelatedCertifiedSystemExistsResponse(
         architecture=system_info.architecture,
         board=(
@@ -147,6 +214,40 @@ def is_partially_certified(
             if board
             else None
         ),
-        gpu=gpus,
         processor=cpus,
+        gpu=gpus,
+        audio=audio_devices,
+        video=capture_devices,
+        network=network_devices,
+        wireless=wireless_devices,
+        pci_peripherals=pci_devices,
+        usb_peripherals=usb_devices,
     )
+
+
+def _get_matching_devices(
+    db: Session,
+    devices_query: Query,
+    device_validator_list: list,
+    find_matching_function: Callable[[Session, Query, Any], Device | None],
+    device_validator_class: type[BaseModel],
+    validator_mapping: Callable[[Device, Any], Any],
+):
+    """
+    General-purpose function to get matching devices.
+
+    :param db: SQLAlchemy database session.
+    :param devices_query: Devices query object.
+    :param device_validator_list: List of device validator objects.
+    :param find_matching_function: The function that retrieves matching devices.
+    :param device_validator_class: The validator class to return as response.
+    :param validator_mapping: Mapping function to transform devices to validator objects.
+    :return: A list of matching device validator objects.
+    """
+    devices = []
+    for device_info in device_validator_list:
+        device = find_matching_function(db, devices_query, device_info)
+        if device is None:
+            continue
+        devices.append(validator_mapping(device, device_info))
+    return devices
